# commute-tmle

./: .gitignore  00_create_mock_input.sh  01_set_dates.sh  02_merge_covariates.sh  03_fit_tmle.sh  README.md  environment.yml  pyproject.toml  run_all_scripts.sh  run_all_scripts_tnx.ipynb
conf/: config.py  config.yaml
conf/cohort/: mock_data.yaml  trinetx.yaml  ukbiobank.yaml
conf/experiment/: ad_first_wave_prepandemic_control_fu_hospital.yaml  ad_first_wave_prepandemic_control_fu_tested.yaml  ad_first_wave_tested_positive_vs_negative.yaml  ad_second_wave_prepandemic_control_fu_hospital.yaml  ad_second_wave_prepandemic_control_fu_tested.yaml  ad_second_wave_tested_positive_vs_negative.yaml  ad_third_wave_prepandemic_control_fu_hospital.yaml  ad_third_wave_prepandemic_control_fu_tested.yaml  ad_third_wave_tested_positive_vs_negative.yaml  composite_first_wave_prepandemic_control_fu_tested.yaml  composite_first_wave_tested_positive_vs_negative.yaml  composite_first_wave_tested_vs_untested.yaml  composite_second_wave_prepandemic_control_fu_hospital.yaml  composite_second_wave_prepandemic_control_fu_tested.yaml  composite_second_wave_tested_positive_vs_negative.yaml  composite_third_wave_prepandemic_control_fu_hospital.yaml  composite_third_wave_prepandemic_control_fu_tested.yaml  composite_third_wave_tested_positive_vs_negative.yaml  pd_first_wave_prepandemic_control_fu_hospital.yaml  pd_first_wave_prepandemic_control_fu_tested.yaml  (+16 more)
src/: create_mock_input.py  fit_tmle.py  hte_exploration.py  merge_covariates.py  nested_cv.py  plotting.py  set_dates.py
(+15 files in other folders)
